# multi-agent-system

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 37444d708acb_remove_message_count.py  38b08d9a3c6c_first_migration.py  8626d74bfe2e_add_is_summarized_and_chat_summaries.py
app/: database.py  main.py
app/agents/: __init__.py  executor_agent.py  gemini_agent.py  graph.py  orchestrator_agent.py  planner_agent.py  state.py  supervisor_agent.py
app/common/: __init__.py  responses.py  settings.py  user_email.py
app/controllers/: __init__.py  chat_controller.py  document_controller.py  session_controller.py  user_controller.py
app/mcp/: client.py  mcp_server.json
app/models/: __init__.py  model.py
app/prompts/: __init__.py  executor_prompt.py  orchestrator_prompt.py  planner_prompt.py  summary_prompt.py  supervisor_prompt.py  system_prompt.py
app/routers/: __init__.py  chat_router.py  documents_router.py  session_router.py  user_router.py
app/services/: __init__.py  chat_service.py  documents_service.py  email_service.py  mem0_service.py  pdf_service.py  search_service.py  session_service.py  summary_service.py  user_service.py
app/tools/: __init__.py  langchain_tools.py  mcp_tools.py
app/utils/: __init__.py  jwt.py  middleware.py  security.py
app/validation/: __init__.py  chat_validation.py  document_validation.py  session_validation.py  user_validation.py
data/faiss/: 5.faiss  5.json  6.json
